...
                ).clickable { onSelectedChange(!selected) }
                .padding(vertical = 10.dp, horizontal = SpacingTokens.S),
        contentAlignment = Alignment.Center,
    ) {
        Icon(
            imageVector = if (selected) AppIcons.Check else AppIcons.Add,
            contentDescription = if (selected) "Unsubscribe" else "Subscribe",
            tint = if (selected) colorScheme.neutralWhite else colorScheme.brandDefault,
            modifier = Modifier.size(24.dp),
        )
    }
}

...
