...
import dev.whysoezzy.uikit.models.UIKitMeetingInfo
import dev.whysoezzy.uikit.tokens.AppIcons
import org.koin.androidx.compose.koinViewModel
import dev.whysoezzy.uikit.R as UIKitR

private const val AD_BLOCK_INTERVAL = 3
internal const val MAIN_SCREEN_CONTENT_TAG = "main_screen_content"

@Composable
fun MainScreen(
    viewModel: MainScreenViewModel = koinViewModel(),
    onMeetingClick: (Long) -> Unit,
    onCommunityClick: (Long) -> Unit,
...
